[tool.poetry]
name = "aoc23"
version = "0.1.0"
description = ""
authors = ["Tristan Wagner <tristan.wagner@nike.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.1.3"
numpy = "^1.26.2"
tqdm = "^4.66.1"
pyarrow = "^14.0.1"


[tool.poetry.group.dev.dependencies]
matplotlib = "^3.8.2"
plotly = "^5.18.0"
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
